[WIP] account followup : one table per currency in reports, added history, next action button shortcuts, fixed some layout issues, move contact information from tooltip to actual report and small fixes

--- a/addons/account/static/src/css/account_financial_report.css
+++ b/addons/account/static/src/css/account_financial_report.css
@@ -20,7 +20,7 @@ div.oe-account-next-action:hover i.fa {
 div.savedSummary:hover {
     border-left: thin groove;
 }
-input#summary, div.dropdown, i.fa, div.savedSummary span, td.unfoldable, td.foldable, span#public-link, input[type=checkbox], div.oe-account-next-action {
+input#summary, div.dropdown, span.dropdown, i.fa, div.savedSummary span, td.unfoldable, td.foldable, span#public-link, input[type=checkbox], div.oe-account-next-action {
     cursor: pointer; cursor: hand;
 }
 td i.fa-pencil-square{
